<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wawandco.taller1.MainActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:paddingBottom="10px"
                android:paddingTop="20px"
                android:text="@string/compañia"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:typeface="monospace" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/cantidad"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtCantidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:fontFamily="casual"
                android:text="@string/dije"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/cmdDije" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:fontFamily="casual"
                android:text="@string/tipo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/cmdTipo" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="casual"
                android:text="@string/material"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/cmdMaterial" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="60dp" >

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_dolar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="cambiaModoDePago"
                        android:text="@string/dolar" />
                    <RadioButton android:id="@+id/radio_pesos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pesos"
                        android:onClick="cambiaModoDePago"/>
                </RadioGroup>
            </RadioGroup>

            <TextView
                android:id="@+id/totalValor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnAceptar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:onClick="total"
                android:text="@string/aceptar"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
